[package]
name = "proteus_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
raptorq = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
smoltcp = { version = "0.12.0", features = ["std", "medium-ethernet", "proto-ipv4", "socket-tcp"] }
tokio = { version = "1.49.0", features = ["full"] }
tun = "0.8.5"
